[workspace]
members = [
  "astra-staking",
  "astra",
  "astra-factory",
  "test-token"
]

[workspace.package]
edition = "2021"
license = "MIT"
repository = "https://github.com/near-ndc/astra"
authors = [
    "Sputnik Devs <near-daos@protonmail.com>",
    "NDC GWG (https://near.social/#/mob.near/widget/ProfilePage?accountId=govworkinggroup.near)",
]

[profile.release]
codegen-units = 1
# Tell `rustc` to optimize for small code size.
opt-level = "z"
lto = true
debug = true
panic = "abort"
# Opt into extra safety checks on arithmetic operations https://stackoverflow.com/a/64136471/249801
overflow-checks = true

[workspace.dependencies]
near-sdk = "^4.1.1"
near-contract-standards = "^4.1.1"
uint = { version = "^0.9.5", default-features = false }
serde_json = "^1.0"
hex = "0.4.2"

# workspace doesn't have dev-dependencies field, so we have to put the dependencies here
# https://doc.rust-lang.org/cargo/reference/workspaces.html
anyhow = "1.0.72"
tokio = { version = "1.29.1", features = ["full"] }
workspaces = "0.7.0"
near-primitives = "0.17.0"
near-units = "0.2.0"