[package]
name = "astra-factory"
version = "0.1.0"
publish = false
authors = { workspace = true }
edition = { workspace = true }
repository = { workspace = true }
license = { workspace = true }

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
near-sdk.workspace = true

[dev-dependencies]
near-sdk-sim.workspace = true
