[package]
name = "astra-staking"
version = "0.1.0"
publish = false
authors = { workspace = true }
edition = { workspace = true }
repository = { workspace = true }
license = { workspace = true }



[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
near-sdk.workspace = true
near-contract-standards.workspace = true
hex.workspace = true

[dev-dependencies]
workspaces.workspace = true
test-token = { path = "../test-token" }
near-units.workspace = true
