[package]
name = "astra"
version = "0.1.0"
publish = false
authors = { workspace = true }
edition = { workspace = true }
repository = { workspace = true }
license = { workspace = true }


[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
near-sdk.workspace = true
near-contract-standards.workspace = true
hex.workspace = true

[dependencies.serde_with]
version = "1.4.0"

[dev-dependencies]
workspaces.workspace = true
near-units.workspace = true
tokio.workspace = true
anyhow.workspace = true
test-token = { path = "../test-token" }
astra-staking = { path = "../astra-staking" }
astra-factory = { path = "../astra-factory" }
